Split Domain and Infrastructure

--- a/BerthaInnes.Infrastructure/BerthaInnes.Infrastructure.csproj
+++ b/BerthaInnes.Infrastructure/BerthaInnes.Infrastructure.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="EventStore.Client" Version="5.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BerthaInnes\BerthaInnes.Domain.csproj" />
   </ItemGroup>
 
 </Project>
