--- a/BerthaInnes.Tests/BerthaInnes.Domain.Tests.csproj
+++ b/BerthaInnes.Tests/BerthaInnes.Domain.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BerthaInnes\BerthaInnes.csproj" />
+    <ProjectReference Include="..\BerthaInnes\BerthaInnes.Domain.csproj" />
   </ItemGroup>
 
 </Project>
